Altas y bajas de nuestras Tabla Productos

--- a/Sistema_Facturacion/Sistema_Facturacion/Sistema_Facturacion.csproj
+++ b/Sistema_Facturacion/Sistema_Facturacion/Sistema_Facturacion.csproj
@@ -55,6 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\Datos.cs" />
+    <Compile Include="Clases\Producto.cs" />
+    <Compile Include="Clases\Utilidades.cs" />
     <Compile Include="Formularios\FrmArticulos.cs">
       <SubType>Form</SubType>
     </Compile>
