--- a/Sistema_Facturacion/Sistema_Facturacion/App.config
+++ b/Sistema_Facturacion/Sistema_Facturacion/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Sistema_Facturacion.Properties.Settings.FacturacionConnectionString"
+            connectionString="Data Source=DESKTOP-02FCSK2\BASE_DATOS;Initial Catalog=Facturacion;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
